--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,8 @@ button:hover {
         margin: 5px;
     }
 }
+
+#tetris-canvas {
+    border: 1px solid black;
+    background-color: #111; /* Dark background for better contrast */
+}
